# spatialnde2

./: .gitignore  CMakeLists.txt  FindICONV.cmake  Makefile  NOTES.txt  README.md  README.txt  TODO.txt  WINDOWS_ANACONDA_BUILD.txt  allocator.cpp  allocator.h  allocator.hpp  allocator.i  allocator_test.cpp  arraymanager.cpp  arraymanager.hpp  arraymanager.i  custom_geometrystruct_demo.py  different_locking_processes.py  file2header.py  geometry.h  geometry.hpp  geometry.i  geometry_types.h  geometry_types.i  geometrydata.h  geometrydata.i  lockmanager.cpp  lockmanager.hpp  lockmanager.i  manager_test.cpp  memallocator.hpp  opencl_example.cpp  opencl_example.py  opencl_example2.py  opencl_manager_test.cpp  opencl_manager_test.py  opencl_utils.cpp  opencl_utils.hpp  opencl_utils.i  (+20 more)
.github/workflows/: push-to-public.yml
doc/: Projection_simplified.xoj
doc/UsersGuide/source/: about.rst  concepts.rst  conf.py  examples.rst  installation.rst  usage.rst
doc/misc/: Projection_simplified.xopp
example/: custom_geometrystruct_demo.py  different_locking_processes.py  opencl_example.cpp  opencl_example.py  opencl_example2.py  png_viewer.cpp  x3d_viewer.cpp  x3d_viewer_qt.cpp
python/: pyproject.toml  pyproject_assign_git_root.py  setup.py
python/spatialnde2/: manual_positioner_in_transaction.dpi  project_probe_tip_data_in_transaction.dpi  quatpy.py  recdb.dpi  recdb_gui.dpi
snde/: NumPy_BGRtoGray16.cpp  NumPy_BGRtoRGBA.cpp  accumulate_once.cpp  accumulate_once.i  allocator.cpp  allocator.hpp  allocator.i  ande_file.cpp  ande_file.hpp  ande_file.i  area_calc.c  area_calculation.cpp  area_calculation.hpp  area_calculation.i  arithmetic.cpp  arithmetic.hpp  arithmetic.i  array_index_ops.h  arraymanager.hpp  arraymanager.i  arrayposition.hpp  arrayposition.i  averaging_downsampler.cpp  bad_pixel_correction.cpp  batched_live_accumulator.cpp  batched_live_accumulator.hpp  bounding_hyperboxes.hpp  boxes_calculation.cpp  boxes_calculation.hpp  cached_recording.hpp  colormap.h  data_to_rgba.cpp  dexela2923_image_transform.cpp  dexela2923_image_transform.hpp  dexela2923_image_transform_kernel.h  display_requirements.cpp  display_requirements.hpp  display_requirements.i  file2header.py  fusion_colormap.c  (+169 more)
snde/mutable_recdb/: geometry_scene.hpp  imageprojection.cpp  infostore_or_component.cpp  inplanemat_calculation.cpp  mutablerecstore.hpp  projinfo_calculation.cpp  projinfo_calculation.hpp  qtrecviewer.cpp  qtrecviewer.hpp
spatialnde2_example_external_cpp_function/: setup.py
spatialnde2_example_external_cpp_function/spatialnde2_example_external_cpp_function/: scalar_multiply.pyx  scalar_multiply_cpp.cpp  scalar_multiply_cpp.hpp  scalar_multiply_cpp.pxd
src/: allocator.cpp  allocator.h  allocator.hpp  allocator.i  array_index_ops.h  arraymanager.hpp  arraymanager.i  arrayposition.hpp  boxes_calculation.cpp  boxes_calculation.hpp  data_to_rgba.hpp  file2header.py  geometry.cpp  geometry.hpp  geometry.i  geometry_functions.hpp  geometry_ops.h  geometry_scene.hpp  geometry_types.h  geometry_types.i  geometrydata.h  imageprojection.cpp  infostore_or_component.cpp  infostore_or_component.hpp  inplanemat_calculation.cpp  lock_types.hpp  lock_types.i  lockmanager.cpp  lockmanager.hpp  lockmanager.i  memallocator.hpp  memallocator.i  metadata.hpp  mutablewfmstore.cpp  mutablewfmstore.hpp  normal_calc.c  normal_calculation.cpp  normal_calculation.hpp  notify.cpp  notify.hpp  (+78 more)
src/mutable_recdb/: normal_calculation.cpp  openscenegraph_renderer.hpp  projinfo_calculation.cpp  qtrecviewer.cpp
src/mutable_wfmdb/: geometry.cpp  geometry.hpp  infostore_or_component.hpp  inplanemat_calculation.cpp  mutablewfmstore.cpp  openscenegraph_data.hpp  openscenegraph_geom.hpp  openscenegraph_parameterization.hpp  openscenegraph_picker.hpp  openscenegraph_texture.hpp  projinfo_calculation.hpp  qtwfmviewer.cpp  qtwfmviewer.hpp  revision_manager.hpp  revman_wfm_display.hpp  revman_wfmstore.hpp
src/python/: std_unordered_map.i
src/std/: std_unordered_map.i
test/: Plate.FCStd  Plate_uv.x3d  Probe.FCStd  Probe.stl  Probe_uv.x3d  SCANINFO_EG5_singleframe.nde  accumulate_once_deleteandrecreate.dgp  accumulate_once_emitwhencompleteonly.dgp  accumulate_once_test.dgp  allocator_test.cpp  ande_viewer.cpp  avg_test.dgp  compositor_test.cpp  fusion_ndarrayrecording_nonzerototals_render_test.dgp  kdtree_test.py  manager_test.cpp  matrixsolve_test.cpp  measurement_clock_python.py  nd_accumulate_once.dgp  ndaccumulate_once.dgp  nde_viewer.cpp  null_recording_test.dgp  offset_calibration_demo.dgp  ondemand_test.cpp  opencl_calc_test.cpp  osg_layerwindow_test.cpp  phase_plot_test.dgp  png_viewer.cpp  project_data.dgp  project_live_probe_tip_data.dgp  project_live_probe_tip_data_scan.dgp  project_probe_tip_data.dgp  qtrecviewer_test.py  recdb_test.cpp  recdb_test.py  recmath_test.cpp  recmath_test2.cpp  recmath_test2.py  thread_test.cpp  timed_transaction.dgp  (+10 more)
